fixes code word-break on non-chrome 2

--- a/_sass/resources.scss
+++ b/_sass/resources.scss
@@ -229,6 +229,6 @@ table#signing-file-elements tr td code {
 	word-break: normal;
 }
 
-p > code {
+p > code, li > code {
 	word-break: normal;
 }
